--- a/CollegeProjectCourse2/MainWindow.xaml
+++ b/CollegeProjectCourse2/MainWindow.xaml
@@ -19,8 +19,8 @@
         </Grid.ColumnDefinitions>
         <Image Grid.Column="0" Margin="0" Source="original.gif" Grid.ColumnSpan="3" Grid.RowSpan="3" Stretch="Fill" />
         <StackPanel Grid.Column="1" Grid.Row="1" UseLayoutRounding="False" HorizontalAlignment="Center" VerticalAlignment="Center" Width="262">
-            <Button Content="Начать игру" FontSize="16" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Height="30" />
-            <Button Content="Просмотреть результаты игр" FontSize="16" Height="30" />
+            <Button Content="Начать игру" FontSize="16" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Height="30" Click="Button_Click_13" />
+            <Button Content="Просмотреть результаты игр" FontSize="16" Height="30" Click="Button_Click_10" />
             <Button Content="Создать персонажа" FontSize="16" Height="30" Click="Button_Click_1" />
             <Button Content="Просмотреть персонажей" FontSize="16" Height="30" Click="Button_Click_3" />
             <Button Content="Выход" FontSize="16" Click="Button_Click" Height="30" />
@@ -131,6 +131,148 @@
             <Label x:Name="viewFamily" Content="" Grid.Column="1" HorizontalAlignment="Left" Margin="233,286,0,0" Grid.Row="2" VerticalAlignment="Top" Width="103"/>
             <Label x:Name="viewLegend" Content="" Grid.Column="1" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="58,150,0,0" Grid.Row="2" VerticalAlignment="Top" Width="100" Height="110"/>
             <DataGrid x:Name="playersList" Grid.Column="2" HorizontalAlignment="Left" Height="369" Margin="10,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="352" IsReadOnly="True" SelectionChanged="playersList_SelectionChanged"/>
+        </Grid>
+        <Grid x:Name="viewerResultMenu" Grid.ColumnSpan="3" Grid.RowSpan="3" Margin="0,0,-0.576,0" Visibility="Hidden">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50*"/>
+                <RowDefinition Height="47*"/>
+                <RowDefinition Height="322*"/>
+                <RowDefinition Height="50*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="71*"/>
+                <ColumnDefinition Width="379*"/>
+                <ColumnDefinition Width="371*"/>
+                <ColumnDefinition Width="71*"/>
+            </Grid.ColumnDefinitions>
+            <Rectangle Fill="#FFF4F4F5" Stroke="Black" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Grid.ColumnSpan="2"/>
+            <Image Grid.Column="1" HorizontalAlignment="Left" Height="100" Margin="58,19,0,0" Grid.Row="2" VerticalAlignment="Top" Width="100" Source="sample-logo.png" Stretch="Fill"/>
+            <StackPanel Grid.Column="1" HorizontalAlignment="Left" Height="32" Margin="233,171,0,0" Grid.Row="2" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.517,0.515"/>
+            <Label Content="Просмотр результатов" HorizontalContentAlignment="Center" Grid.Column="1" Margin="281,10,280,0" Grid.Row="1" VerticalContentAlignment="Center" VerticalAlignment="Top" FontSize="16" Height="31" Grid.ColumnSpan="2"/>
+            <Label x:Name="resFirstName" Content="" Grid.Column="1" HorizontalAlignment="Left" Margin="58,0,0,0" Grid.Row="2" VerticalAlignment="Top" Height="26" Width="100" RenderTransformOrigin="-0.333,0.462"/>
+            <Button Content="Выйти" Margin="154,315,152,37" Grid.Column="1" Grid.Row="2" Click="Button_Click_9" RenderTransformOrigin="0.573,-0.378"/>
+            <DataGrid x:Name="resultsList" Grid.Column="2" HorizontalAlignment="Left" Height="369" Margin="10,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="352" IsReadOnly="True" SelectionChanged="resultsList_SelectionChanged"/>
+            <Image Grid.Column="1" HorizontalAlignment="Left" Height="100" Margin="233,19,0,0" Grid.Row="2" VerticalAlignment="Top" Width="100" Source="sample-logo.png" Stretch="Fill"/>
+            <Label x:Name="resSecondName" Content="" Grid.Column="1" HorizontalAlignment="Left" Margin="233,0,0,0" Grid.Row="2" VerticalAlignment="Top" Height="26" Width="100" RenderTransformOrigin="-0.333,0.462"/>
+            <Label x:Name="resWin" Content="" HorizontalContentAlignment="Center" Grid.Column="1" HorizontalAlignment="Left" Margin="144,153,0,0" Grid.Row="2" VerticalAlignment="Top" Width="103"/>
+            <Label x:Name="resLifes" Content="" HorizontalContentAlignment="Center" Grid.Column="1" HorizontalAlignment="Left" Margin="144,185,0,0" Grid.Row="2" VerticalAlignment="Top" Width="103"/>
+            <Label x:Name="resTime" Content="" HorizontalContentAlignment="Center" Grid.Column="1" HorizontalAlignment="Left" Margin="58,216,0,0" Grid.Row="2" VerticalAlignment="Top" Width="275"/>
+        </Grid>
+        <Grid x:Name="startGame" Grid.ColumnSpan="3" Grid.RowSpan="3" Margin="0,0,-0.864,0" Visibility="Hidden">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50*"/>
+                <RowDefinition Height="47*"/>
+                <RowDefinition Height="322*"/>
+                <RowDefinition Height="50*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="71*"/>
+                <ColumnDefinition Width="379*"/>
+                <ColumnDefinition Width="371*"/>
+                <ColumnDefinition Width="71*"/>
+            </Grid.ColumnDefinitions>
+            <Rectangle Fill="#FFF4F4F5" Stroke="Black" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Grid.ColumnSpan="2"/>
+            <Label Content="Начать игру" HorizontalContentAlignment="Center" Grid.Column="1" Margin="281,10,280,0" Grid.Row="1" VerticalContentAlignment="Center" VerticalAlignment="Top" FontSize="16" Height="31" Grid.ColumnSpan="2"/>
+            <Button Content="Выйти" Margin="258,317,48,35" Grid.Column="1" Grid.Row="2" RenderTransformOrigin="0.573,-0.378" Click="Button_Click_12"/>
+            <Button Content="Вперёд!" Margin="47,317,251,35" Grid.Column="2" Grid.Row="2" RenderTransformOrigin="0.573,-0.378" Click="Button_Click_14"/>
+            <ComboBox x:Name="startPers1" Grid.Column="1" HorizontalAlignment="Left" Margin="92,122,0,0" Grid.Row="2" VerticalAlignment="Top" Width="120"/>
+            <ComboBox x:Name="startPers2" Grid.Column="2" HorizontalAlignment="Left" Margin="84,122,0,0" Grid.Row="2" VerticalAlignment="Top" Width="120"/>
+            <TextBox x:Name="startHP1" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="178,170,0,0" Grid.Row="2" TextWrapping="Wrap" Text="50" VerticalAlignment="Top" Width="120"/>
+            <TextBox x:Name="startHP2" Grid.Column="2" HorizontalAlignment="Left" Height="23" Margin="165,170,0,0" Grid.Row="2" TextWrapping="Wrap" Text="50" VerticalAlignment="Top" Width="120"/>
+            <Label Content="Количество жизней" Grid.Column="1" HorizontalAlignment="Left" Margin="54,166,0,0" Grid.Row="2" VerticalAlignment="Top"/>
+            <Label Content="Первый игрок" Grid.Column="1" HorizontalAlignment="Left" Margin="92,91,0,0" Grid.Row="2" VerticalAlignment="Top"/>
+            <Label Content="Второй игрок" Grid.Column="2" HorizontalAlignment="Left" Margin="84,91,0,0" Grid.Row="2" VerticalAlignment="Top"/>
+            <Label Content="Количество жизней" Grid.Column="2" HorizontalAlignment="Left" Margin="41,166,0,0" Grid.Row="2" VerticalAlignment="Top"/>
+            <TextBox x:Name="startD1" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="178,201,0,0" Grid.Row="2" TextWrapping="Wrap" Text="99" VerticalAlignment="Top" Width="120"/>
+            <Label Content="Количество ходов" Grid.Column="1" HorizontalAlignment="Left" Margin="54,197,0,0" Grid.Row="2" VerticalAlignment="Top"/>
+            <TextBox x:Name="startD2" Grid.Column="2" HorizontalAlignment="Left" Height="23" Margin="165,201,0,0" Grid.Row="2" TextWrapping="Wrap" Text="99" VerticalAlignment="Top" Width="120"/>
+            <Label Content="Количество ходов" Grid.Column="2" HorizontalAlignment="Left" Margin="41,197,0,0" Grid.Row="2" VerticalAlignment="Top"/>
+        </Grid>
+        <Grid x:Name="gameWin" Grid.ColumnSpan="3" Grid.RowSpan="3" Margin="0,0,-1.152,0" Visibility="Hidden">
+            <Rectangle Fill="#FFF4F4F5" Stroke="Black" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Grid.ColumnSpan="2"/>
+            <Rectangle Fill="#FFA0A0A0" Stroke="Black" Margin="0,415,0.152,0"/>
+            <Label x:Name="gp1" Content="Игрок 1" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="121"/>
+            <Label x:Name="gp2" Content="Игрок 2" HorizontalAlignment="Left" Margin="765,10,0,0" VerticalAlignment="Top" Width="121"/>
+            <Label x:Name="gameL1" Content="Здоровье: 999" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" Width="107"/>
+            <Label x:Name="gameL2" Content="Здоровье: 999" HorizontalAlignment="Left" Margin="765,41,0,0" VerticalAlignment="Top" Width="107"/>
+            <Label x:Name="gameS2" Content="Сила 8/8" HorizontalAlignment="Left" Margin="765,72,0,0" VerticalAlignment="Top" Width="107"/>
+            <Label x:Name="gameS1" Content="Сила 8/8" HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top" Width="107"/>
+            <Label x:Name="secPlayer" Content="Игрок 1" HorizontalAlignment="Left" Margin="10,384,0,0" VerticalAlignment="Top" Width="98"/>
+            <Grid x:Name="g1" HorizontalAlignment="Left" Height="130" VerticalAlignment="Top" Width="98" Margin="10,426,0,0" PreviewMouseDown="Grid_PreviewMouseDown">
+                <Rectangle Fill="#FFCBD695" HorizontalAlignment="Left" Height="129" Margin="0,6,-10,-456" Stroke="Black" VerticalAlignment="Top" Width="100"/>
+                <Label Content="5" HorizontalAlignment="Left" Margin="0,103,0,0" VerticalAlignment="Top" Height="27" Width="18"/>
+                <Label Content="5" HorizontalAlignment="Left" Margin="79,103,0,0" VerticalAlignment="Top" Height="27" Width="18" RenderTransformOrigin="0.444,0.481"/>
+                <Image HorizontalAlignment="Left" Height="91" Margin="11,6,0,0" VerticalAlignment="Top" Width="77" Source="sample-logo.png" Stretch="Fill"/>
+                <Label Content="5" HorizontalAlignment="Left" Margin="40,103,0,0" VerticalAlignment="Top" Height="27" Width="18" RenderTransformOrigin="0.444,0.481" Foreground="#FF003AFF" FontSize="14"/>
+            </Grid>
+            <Grid x:Name="g2" HorizontalAlignment="Left" Height="130" VerticalAlignment="Top" Width="99" Margin="122,426,0,0" PreviewMouseDown="Grid_PreviewMouseDown">
+                <Rectangle Fill="#FFCBD695" HorizontalAlignment="Left" Height="129" Margin="0,6,-10,-456" Stroke="Black" VerticalAlignment="Top" Width="100"/>
+                <Label Content="5" HorizontalAlignment="Left" Margin="0,103,0,0" VerticalAlignment="Top" Height="27" Width="18"/>
+                <Label Content="5" HorizontalAlignment="Left" Margin="79,103,0,0" VerticalAlignment="Top" Height="27" Width="18" RenderTransformOrigin="0.444,0.481"/>
+                <Image HorizontalAlignment="Left" Height="91" Margin="11,6,0,0" VerticalAlignment="Top" Width="77" Source="sample-logo.png" Stretch="Fill"/>
+                <Label Content="5" HorizontalAlignment="Left" Margin="40,103,0,0" VerticalAlignment="Top" Height="27" Width="18" RenderTransformOrigin="0.444,0.481" Foreground="#FF003AFF" FontSize="14"/>
+            </Grid>
+            <Grid x:Name="g3" HorizontalAlignment="Left" Height="130" VerticalAlignment="Top" Width="105" Margin="236,426,0,0" PreviewMouseDown="Grid_PreviewMouseDown">
+                <Rectangle Fill="#FFCBD695" HorizontalAlignment="Left" Height="129" Margin="0,6,-10,-456" Stroke="Black" VerticalAlignment="Top" Width="100"/>
+                <Label Content="5" HorizontalAlignment="Left" Margin="0,103,0,0" VerticalAlignment="Top" Height="27" Width="18"/>
+                <Label Content="5" HorizontalAlignment="Left" Margin="79,103,0,0" VerticalAlignment="Top" Height="27" Width="18" RenderTransformOrigin="0.444,0.481"/>
+                <Image HorizontalAlignment="Left" Height="91" Margin="11,6,0,0" VerticalAlignment="Top" Width="77" Source="sample-logo.png" Stretch="Fill"/>
+                <Label Content="5" HorizontalAlignment="Left" Margin="40,103,0,0" VerticalAlignment="Top" Height="27" Width="18" RenderTransformOrigin="0.444,0.481" Foreground="#FF003AFF" FontSize="14"/>
+            </Grid>
+            <Grid x:Name="g4" HorizontalAlignment="Left" Height="130" VerticalAlignment="Top" Width="100" Margin="346,426,0,0" PreviewMouseDown="Grid_PreviewMouseDown">
+                <Rectangle Fill="#FFCBD695" HorizontalAlignment="Left" Height="129" Margin="0,6,-10,-456" Stroke="Black" VerticalAlignment="Top" Width="100"/>
+                <Label Content="5" HorizontalAlignment="Left" Margin="0,103,0,0" VerticalAlignment="Top" Height="27" Width="18"/>
+                <Label Content="5" HorizontalAlignment="Left" Margin="79,103,0,0" VerticalAlignment="Top" Height="27" Width="18" RenderTransformOrigin="0.444,0.481"/>
+                <Image HorizontalAlignment="Left" Height="91" Margin="11,6,0,0" VerticalAlignment="Top" Width="77" Source="sample-logo.png" Stretch="Fill"/>
+                <Label Content="5" HorizontalAlignment="Left" Margin="40,103,0,0" VerticalAlignment="Top" Height="27" Width="18" RenderTransformOrigin="0.444,0.481" Foreground="#FF003AFF" FontSize="14"/>
+            </Grid>
+            <Button Content="Окончить" HorizontalAlignment="Left" Margin="821,456,0,0" VerticalAlignment="Top" Width="63" Height="75" Click="Button_Click_15"/>
+            <Image HorizontalAlignment="Left" Height="410" Margin="117,0,0,0" VerticalAlignment="Top" Width="642" Source="m7uqrojwh0921.jpg" Stretch="Fill"/>
+            <Grid x:Name="g5" HorizontalAlignment="Left" Height="142" VerticalAlignment="Top" Width="109" Margin="122,0,0,0" PreviewMouseDown="Grid_PreviewMouseDown">
+                <Rectangle Fill="#FFCBD695" HorizontalAlignment="Left" Height="129" Margin="0,6,-10,-456" Stroke="Black" VerticalAlignment="Top" Width="100"/>
+                <Label Content="5" HorizontalAlignment="Left" Margin="0,103,0,0" VerticalAlignment="Top" Height="27" Width="18"/>
+                <Label Content="5" HorizontalAlignment="Left" Margin="79,103,0,0" VerticalAlignment="Top" Height="27" Width="18" RenderTransformOrigin="0.444,0.481"/>
+                <Image HorizontalAlignment="Left" Height="91" Margin="11,6,0,0" VerticalAlignment="Top" Width="77" Source="sample-logo.png" Stretch="Fill"/>
+            </Grid>
+            <Grid x:Name="g6" HorizontalAlignment="Left" Height="139" VerticalAlignment="Top" Width="109" Margin="122,133,0,0" PreviewMouseDown="Grid_PreviewMouseDown">
+                <Rectangle Fill="#FFCBD695" HorizontalAlignment="Left" Height="129" Margin="0,6,-10,-456" Stroke="Black" VerticalAlignment="Top" Width="100"/>
+                <Label Content="5" HorizontalAlignment="Left" Margin="0,103,0,0" VerticalAlignment="Top" Height="27" Width="18"/>
+                <Label Content="5" HorizontalAlignment="Left" Margin="79,103,0,0" VerticalAlignment="Top" Height="27" Width="18" RenderTransformOrigin="0.444,0.481"/>
+                <Image HorizontalAlignment="Left" Height="91" Margin="11,6,0,0" VerticalAlignment="Top" Width="77" Source="sample-logo.png" Stretch="Fill"/>
+            </Grid>
+            <Grid x:Name="g7" HorizontalAlignment="Left" Height="144" VerticalAlignment="Top" Width="109" Margin="122,266,0,0" PreviewMouseDown="Grid_PreviewMouseDown">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="56*"/>
+                    <ColumnDefinition Width="53*"/>
+                </Grid.ColumnDefinitions>
+                <Rectangle Fill="#FFCBD695" HorizontalAlignment="Left" Height="129" Margin="0,6,0,0" Stroke="Black" VerticalAlignment="Top" Width="100" Grid.ColumnSpan="2"/>
+                <Label Content="5" HorizontalAlignment="Left" Margin="0,103,0,0" VerticalAlignment="Top" Height="27" Width="18"/>
+                <Label Content="5" HorizontalAlignment="Left" Margin="23,103,0,0" VerticalAlignment="Top" Height="27" Width="18" RenderTransformOrigin="0.444,0.481" Grid.Column="1"/>
+                <Image HorizontalAlignment="Left" Height="91" Margin="11,6,0,0" VerticalAlignment="Top" Width="77" Source="sample-logo.png" Stretch="Fill" Grid.ColumnSpan="2"/>
+            </Grid>
+            <Grid x:Name="g8" HorizontalAlignment="Left" Height="142" VerticalAlignment="Top" Width="105" Margin="654,0,0,0" PreviewMouseDown="Grid_PreviewMouseDown">
+                <Rectangle Fill="#FFCBD695" HorizontalAlignment="Left" Height="129" Margin="0,6,-10,-456" Stroke="Black" VerticalAlignment="Top" Width="100"/>
+                <Label Content="5" HorizontalAlignment="Left" Margin="0,103,0,0" VerticalAlignment="Top" Height="27" Width="18"/>
+                <Label Content="5" HorizontalAlignment="Left" Margin="79,103,0,0" VerticalAlignment="Top" Height="27" Width="18" RenderTransformOrigin="0.444,0.481"/>
+                <Image HorizontalAlignment="Left" Height="91" Margin="11,6,0,0" VerticalAlignment="Top" Width="77" Source="sample-logo.png" Stretch="Fill"/>
+            </Grid>
+            <Grid x:Name="g9" HorizontalAlignment="Left" Height="139" VerticalAlignment="Top" Width="105" Margin="654,133,0,0" PreviewMouseDown="Grid_PreviewMouseDown">
+                <Rectangle Fill="#FFCBD695" HorizontalAlignment="Left" Height="129" Margin="0,6,-10,-456" Stroke="Black" VerticalAlignment="Top" Width="100"/>
+                <Label Content="5" HorizontalAlignment="Left" Margin="0,103,0,0" VerticalAlignment="Top" Height="27" Width="18"/>
+                <Label Content="5" HorizontalAlignment="Left" Margin="79,103,0,0" VerticalAlignment="Top" Height="27" Width="18" RenderTransformOrigin="0.444,0.481"/>
+                <Image HorizontalAlignment="Left" Height="91" Margin="11,6,0,0" VerticalAlignment="Top" Width="77" Source="sample-logo.png" Stretch="Fill"/>
+            </Grid>
+            <Grid x:Name="g10" HorizontalAlignment="Left" Height="144" VerticalAlignment="Top" Width="105" Margin="654,266,0,0" PreviewMouseDown="Grid_PreviewMouseDown">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="56*"/>
+                    <ColumnDefinition Width="53*"/>
+                </Grid.ColumnDefinitions>
+                <Rectangle Fill="#FFCBD695" HorizontalAlignment="Left" Height="129" Margin="0,6,0,0" Stroke="Black" VerticalAlignment="Top" Width="100" Grid.ColumnSpan="2"/>
+                <Label Content="5" HorizontalAlignment="Left" Margin="0,103,0,0" VerticalAlignment="Top" Height="27" Width="18"/>
+                <Label Content="5" HorizontalAlignment="Left" Margin="23,103,0,0" VerticalAlignment="Top" Height="27" Width="18" RenderTransformOrigin="0.444,0.481" Grid.Column="1"/>
+                <Image HorizontalAlignment="Left" Height="91" Margin="11,6,0,0" VerticalAlignment="Top" Width="77" Source="sample-logo.png" Stretch="Fill" Grid.ColumnSpan="2"/>
+            </Grid>
+            <Button Content="Выход" HorizontalAlignment="Left" Margin="740,456,0,0" VerticalAlignment="Top" Width="63" Height="75" Click="Button_Click_16"/>
         </Grid>
     </Grid>
 </Window>
